syntax = "proto3";

option java_multiple_files = true;
option java_package = "top.ddupan.realworld.sensitive";
option java_outer_classname = "SensitiveGrpcProto";

package sensitive;

service SensitiveGrpc {
  rpc CheckSensitive (CheckSensitiveRequest) returns (CheckSensitiveReply) {}
}

message CheckSensitiveRequest {
  string content = 1;
}

message CheckSensitiveReply {
  bool isSensitive = 1;
  string content = 2;
}
